--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,8 +65,13 @@ x-replica-init-command: &replica-init-command |
     echo "Replica initialized successfully"
   fi
 
-  # Start PostgreSQL
-  exec postgres
+  # Start PostgreSQL with query logging enabled
+  exec postgres \
+    -c log_statement=all \
+    -c log_min_duration_statement=0 \
+    -c log_connections=on \
+    -c log_disconnections=on \
+    -c log_line_prefix='%t [%p]: [%l-1] user=%u,db=%d,app=%a,client=%h '
 
 services:
   keycloak:
@@ -230,41 +235,41 @@ services:
   # Replicates from primary using streaming replication
   # Handles read-only queries for horizontal scaling
   # UNCOMMENT THE BLOCK BELOW TO ENABLE:
-  # opentdfdb-replica1:
-  #   <<: *postgres-base
-  #   environment:
-  #     <<: *replica-env
-  #   volumes:
-  #     - opentdfdb_replica1_data:/var/lib/postgresql/data
-  #   depends_on:
-  #     <<: *replica-depends-on
-  #   healthcheck:
-  #     <<: *postgres-healthcheck-replica
-  #   ports:
-  #     - "5433:5432"
-  #   entrypoint: ["/bin/sh", "-c"]
-  #   command:
-  #     - *replica-init-command
+  opentdfdb-replica1:
+    <<: *postgres-base
+    environment:
+      <<: *replica-env
+    volumes:
+      - opentdfdb_replica1_data:/var/lib/postgresql/data
+    depends_on:
+      <<: *replica-depends-on
+    healthcheck:
+      <<: *postgres-healthcheck-replica
+    ports:
+      - "5433:5432"
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - *replica-init-command
 
   # PostgreSQL Read Replica 2 (SCENARIO 2 & 3)
   # Replicates from primary using streaming replication
   # Handles read-only queries for horizontal scaling
   # UNCOMMENT THE BLOCK BELOW TO ENABLE:
-  # opentdfdb-replica2:
-  #   <<: *postgres-base
-  #   environment:
-  #     <<: *replica-env
-  #   volumes:
-  #     - opentdfdb_replica2_data:/var/lib/postgresql/data
-  #   depends_on:
-  #     <<: *replica-depends-on
-  #   healthcheck:
-  #     <<: *postgres-healthcheck-replica
-  #   ports:
-  #     - "5434:5432"
-  #   entrypoint: ["/bin/sh", "-c"]
-  #   command:
-  #     - *replica-init-command
+  opentdfdb-replica2:
+    <<: *postgres-base
+    environment:
+      <<: *replica-env
+    volumes:
+      - opentdfdb_replica2_data:/var/lib/postgresql/data
+    depends_on:
+      <<: *replica-depends-on
+    healthcheck:
+      <<: *postgres-healthcheck-replica
+    ports:
+      - "5434:5432"
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - *replica-init-command
 
   # PostgreSQL Primary 2 (SCENARIO 3 ONLY - Multi-Host Primary Failover)
   # Second primary database for automatic failover
@@ -414,10 +419,10 @@ volumes:
   opentdfdb_primary_data:
     name: opentdfdb_primary_data
   # SCENARIO 2 & 3: Uncomment replica volumes when enabling read replicas
-  # opentdfdb_replica1_data:
-  #   name: opentdfdb_replica1_data
-  # opentdfdb_replica2_data:
-  #   name: opentdfdb_replica2_data
+  opentdfdb_replica1_data:
+    name: opentdfdb_replica1_data
+  opentdfdb_replica2_data:
+    name: opentdfdb_replica2_data
   # SCENARIO 3: Uncomment primary2 volume when enabling multi-host primary
   # opentdfdb_primary2_data:
   #   name: opentdfdb_primary2_data
