--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -18,10 +18,10 @@ db:
     max_connection_idle_seconds: 1800
     health_check_period_seconds: 60
   read_replicas:
-  - host: opentdfdb-replica1
-    port: 5432
-  - host: opentdfdb-replica2
-    port: 5432
+  - host: localhost
+    port: 5433
+  - host: localhost
+    port: 5434
 services:
   kas:
     registered_kas_uri: http://localhost:8080 # Should match what you have registered for *this* KAS in the policy db.
