--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -3,25 +3,25 @@ logger:
   type: text
   output: stdout
 # DB and Server configurations are defaulted for local development
-db:
-  host: localhost
-  port: 5432
-  user: postgres
-  password: changeme
-  sslmode: prefer
-  connect_timeout_seconds: 15
-  pool:
-    max_connection_count: 4
-    min_connection_count: 0
-    min_idle_connections_count: 0
-    max_connection_lifetime_seconds: 3600
-    max_connection_idle_seconds: 1800
-    health_check_period_seconds: 60
-  read_replicas:
-  - host: localhost
-    port: 5435
-  - host: localhost
-    port: 5436
+# db:
+#   host: localhost
+#   port: 5432
+#   user: postgres
+#   password: changeme
+#   sslmode: prefer
+#   connect_timeout_seconds: 15
+#   pool:
+#     max_connection_count: 4
+#     min_connection_count: 0
+#     min_idle_connections_count: 0
+#     max_connection_lifetime_seconds: 3600
+#     max_connection_idle_seconds: 1800
+#     health_check_period_seconds: 60
+#   read_replicas:
+#   - host: localhost
+#     port: 5435
+#   - host: localhost
+#     port: 5436
 services:
   kas:
     registered_kas_uri: http://localhost:8080 # Should match what you have registered for *this* KAS in the policy db.
