--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -497,6 +497,8 @@ jobs:
           sudo apt install -y parallel
       - uses: opentdf/platform/test/start-up-with-containers@DSPX-2178-audion
         with:
+          log-level: unknown
+          log-type: json
           platform-ref: ${{ github.event.pull_request.head.sha || github.sha }}
       - uses: opentdf/otdfctl/e2e@main
         with:
