Revert "validation (ti revert)"
This reverts commit 74681e8ef260ec6afc43e9d9de0322131e0fcb80.

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -495,7 +495,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y parallel
-      - uses: opentdf/platform/test/start-up-with-containers@DSPX-2178-audion
+      - uses: opentdf/platform/test/start-up-with-containers@main
         with:
           log-type: json
           platform-ref: ${{ github.event.pull_request.head.sha || github.sha }}
