fix(ci): restore watch.sh tee flags
Update benchmark-bulk CI invocation after removing the --tdf flag.

Signed-off-by: strantalis <strantalis@virtru.com>

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -238,7 +238,7 @@ jobs:
         run: cd examples && go build -o examples .
       - name: run bulk rewrap benchmark tests
         run: |
-          OUTPUT=$(./examples/examples benchmark-bulk --tdf tdf3 --count 100)
+          OUTPUT=$(./examples/examples benchmark-bulk --count 100)
           echo "$OUTPUT"
           echo "$OUTPUT" >> "$GITHUB_STEP_SUMMARY"
           {
