--- a/service/internal/auth/authz/casbin/model.conf
+++ b/service/internal/auth/authz/casbin/model.conf
@@ -8,8 +8,28 @@
 # The 'action' field from v1 is removed as the RPC method itself implies the operation.
 # This simplifies policy when the gRPC Gateway is removed.
 #
-# Dimension format: key1=value1&key2=value2 (alphabetically sorted keys)
-# Wildcards: * matches any value for a dimension, or any RPC path segment
+# ================================
+# Dimension Serialization Format
+# ================================
+#
+# Request dimensions are serialized as: key1=value1&key2=value2
+#   - Keys are sorted alphabetically for canonical ordering
+#   - '&' is the delimiter between key-value pairs (AND semantics)
+#   - '=' separates key from value
+#   - Empty dimensions serialize to "*"
+#
+# Policy dimension patterns:
+#   - "*"                    : Wildcard, matches any dimensions (including empty)
+#   - "namespace=hr"         : Match single dimension exactly
+#   - "namespace=*"          : Match any value for 'namespace' key
+#   - "namespace=hr&attr=x"  : Match multiple dimensions (AND logic)
+#
+# Matching rules (dimensionMatch function):
+#   - Policy "*" matches everything
+#   - Each policy dimension must be satisfied by the request
+#   - Policy can omit dimensions (partial match OK)
+#   - Request can have extra dimensions not in policy (OK)
+#   - Use multiple policy lines for OR logic
 #
 # Example policies:
 #   p, role:admin, *, *, allow                                           # Admin can do anything
