refactor(ci): conditionally set a configuration key and more robustly parse json input for test setup parse json input for test setup (#2998)
### Proposed Changes

* The KAS configuration in `test/start-additional-kas/action.yaml` now
conditionally applies `root_key` based on the `KEY_MANAGEMENT`
environment variable.
* The `test/start-up-with-containers/action.yaml` script was updated to
remove null-delimited input processing when handling `EXTRA_KEYS` in the
`while` loop, improving script compatibility.

### Checklist

- [ ] I have added or updated unit tests
- [ ] I have added or updated integration tests (if appropriate)
- [ ] I have added or updated documentation

### Testing Instructions

---------

Signed-off-by: Scott Hamrick <2623452+cshamrick@users.noreply.github.com>

--- a/test/start-additional-kas/action.yaml
+++ b/test/start-additional-kas/action.yaml
@@ -100,19 +100,21 @@ runs:
         LOG_LEVEL: ${{ inputs.log-level }}
         LOG_TYPE: ${{ inputs.log-type }}
       with:
-        run: >
-          <opentdf-dev.yaml >opentdf-${KAS_NAME}.yaml yq e '
+        run: |
+          yq e '
             (.server.port = env(KAS_PORT))
             | (.mode = ["kas"])
             | (.services.kas.preview.ec_tdf_enabled = env(EC_TDF_ENABLED))
             | (.services.kas.preview.key_management = env(KEY_MANAGEMENT))
             | (.services.kas.registered_kas_uri = "http://localhost:" + env(KAS_PORT))
-            | (.services.kas.root_key = env(ROOT_KEY))
             | (.logger.level = env(LOG_LEVEL))
             | (.logger.type = env(LOG_TYPE))
             | (.sdk_config = {"client_id":"opentdf","client_secret":"secret","core":{"endpoint":"http://localhost:8080","plaintext":true}})
-          '
-          && .github/scripts/watch.sh --tee-err-to logs/kas-${KAS_NAME}.log opentdf-${KAS_NAME}.yaml ./opentdf --config-file ./opentdf-${KAS_NAME}.yaml start
+          ' opentdf-dev.yaml > opentdf-${KAS_NAME}.yaml
+          if [ "${KEY_MANAGEMENT}" == "true" ]; then
+            yq e -i '.services.kas.root_key = env(ROOT_KEY)' opentdf-${KAS_NAME}.yaml
+          fi
+          .github/scripts/watch.sh --tee-err-to logs/kas-${KAS_NAME}.log opentdf-${KAS_NAME}.yaml ./opentdf --config-file ./opentdf-${KAS_NAME}.yaml start
         wait-on: |
           tcp:localhost:${{ inputs.kas-port }}
         log-output-if: true
