set xtest to main.

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -409,7 +409,7 @@ jobs:
       packages: read
       pull-requests: write
       checks: write
-    uses: opentdf/tests/.github/workflows/xtest.yml@a6f7ca42eef4da7142e8610b33a5b39f0c80818e
+    uses: opentdf/tests/.github/workflows/xtest.yml@main
     with:
       focus-sdk: go
       # use commit instead of ref so we can "go get" specific sdk version
