refactor(sdk): remove wasmimport module and consolidate WASM signature logic
- Removed `wasmimport` module and redundant crypto directives.
- Consolidated `calculateSignature` logic into `writer.go` and removed it from `manifest.go`.
- Updated TinyGo canary workflow to reflect WASM module restructuring.

--- a/.github/workflows/tinygo-wasm-canary.yaml
+++ b/.github/workflows/tinygo-wasm-canary.yaml
@@ -50,10 +50,10 @@ jobs:
             path: sdk/experimental/tdf/wasm/stdjson
             expected: fail
             description: "encoding/json with TDF manifest structs (replace with tinyjson)"
-          - name: wasmimport
-            path: sdk/experimental/tdf/wasm/wasmimport
-            expected: unknown
-            description: "go:wasmimport + go:wasmexport directives"
+          - name: wasm
+            path: sdk/experimental/tdf/wasm
+            expected: fail
+            description: "full WASM module — go:wasmimport host ABI + tdf package"
     name: "${{ matrix.canary.name }} (${{ matrix.canary.expected }})"
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
@@ -99,9 +99,9 @@ jobs:
         if: steps.build.outcome == 'success'
         continue-on-error: true
         run: |
-          # Skip execution for wasmimport canary (needs host functions)
-          if [ "${{ matrix.canary.name }}" = "wasmimport" ]; then
-            echo "Skipping execution — wasmimport canary needs host functions"
+          # Skip execution for wasm canary (needs host crypto functions)
+          if [ "${{ matrix.canary.name }}" = "wasm" ]; then
+            echo "Skipping execution — wasm module needs host crypto functions"
             exit 0
           fi
           # Install wasmtime for execution
